import uuid
from django.db import models


class Alert(models.Model):
    """
    Rule-based preliminary alert generated by analyzing a child's measurement.

    child_id and parent_id are UUID references to Profile Service and
    Auth Service respectively — no Django ForeignKey across services.
    parent_id is always injected from the JWT; it is never trusted from the request body.

    These alerts are informational and supportive.
    They do NOT constitute medical diagnosis and are always accompanied by
    a recommendation to consult a pediatrician for concerning findings.
    """

    class AlertType(models.TextChoices):
        GROWTH       = 'growth',       'Anomalie de croissance'
        BMI          = 'bmi',          'Alerte IMC'
        MISSING_DATA = 'missing_data', 'Données manquantes'
        FOLLOW_UP    = 'follow_up',    'Suivi recommandé'
        GENERAL      = 'general',      'Information générale'

    class Severity(models.TextChoices):
        INFO    = 'info',    'Information'
        WARNING = 'warning', 'Avertissement'
        DANGER  = 'danger',  'Danger'

    id             = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    child_id       = models.UUIDField(db_index=True, help_text="References Child in profile_service")
    parent_id      = models.UUIDField(db_index=True, help_text="Set from JWT — never from request body")
    measurement_id = models.UUIDField(
        null=True, blank=True,
        help_text="UUID of the measurement that triggered this alert (from measurements_service)"
    )

    alert_type     = models.CharField(max_length=20, choices=AlertType.choices)
    severity       = models.CharField(max_length=10, choices=Severity.choices, default=Severity.INFO)
    title          = models.CharField(max_length=200)
    message        = models.TextField()
    recommendation = models.TextField(
        blank=True,
        help_text="Always non-empty for warning/danger severity. Suggests consulting a pediatrician."
    )
    is_read        = models.BooleanField(default=False)
    created_at     = models.DateTimeField(auto_now_add=True)

    class Meta:
        db_table = 'alerts'
        ordering = ['-created_at']
        # Prevent identical duplicate alerts for the same measurement while still
        # allowing several growth alerts (weight, height, head circumference).
        constraints = [
            models.UniqueConstraint(
                fields=['measurement_id', 'alert_type', 'title'],
                condition=models.Q(measurement_id__isnull=False),
                name='unique_alert_per_measurement_type_title',
            )
        ]

    def __str__(self):
        return f"Alert({self.alert_type}, {self.severity}, child={self.child_id})"


class ClinicalFinding(models.Model):
    """
    Deterministic clinical interpretation based on WHO references and measurement trends.
    This model records structured, parent-friendly findings (e.g. "bmi_below_reference").
    """
    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    parent_id = models.UUIDField(db_index=True)
    child_id = models.UUIDField(db_index=True)
    measurement_id = models.UUIDField(null=True, blank=True, db_index=True)

    finding_code = models.CharField(max_length=80)
    metric = models.CharField(max_length=40)
    severity = models.CharField(max_length=20)

    child_friendly_title = models.CharField(max_length=255)
    parent_explanation = models.TextField()
    possible_meaning = models.TextField(blank=True)
    recommended_actions = models.JSONField(default=list)
    evidence = models.JSONField(default=dict)

    disclaimer = models.TextField()
    created_at = models.DateTimeField(auto_now_add=True)

    class Meta:
        db_table = 'clinical_findings'
        ordering = ['-created_at']
        constraints = [
            models.UniqueConstraint(
                fields=['measurement_id', 'finding_code'],
                condition=models.Q(measurement_id__isnull=False),
                name='unique_finding_per_measurement_code'
            )
        ]

    def __str__(self):
        return f"ClinicalFinding({self.finding_code}, child={self.child_id})"


class Recommendation(models.Model):
    """
    Explainable decision-support recommendation generated by the analytics engine.

    Each recommendation is linked to a specific measurement analysis and stores:
    - A risk score snapshot (score + level + contributing factors)
    - A personalized recommendation with a plain-language 'why' explanation
    - A medical disclaimer

    This is a "système d'aide à la décision basé sur des règles explicables",
    NOT a clinical diagnosis, NOT a trained ML prediction, and NOT a substitute
    for professional medical advice.
    """

    class Category(models.TextChoices):
        NUTRITION                = 'nutrition',                'Nutrition'
        FOLLOW_UP                = 'follow_up',                'Suivi'
        MEASUREMENT_VERIFICATION = 'measurement_verification', 'Vérification des mesures'
        APPOINTMENT              = 'appointment',              'Rendez-vous'
        DOCTOR_CONSULTATION      = 'doctor_consultation',      'Consultation médicale'

    class RiskLevel(models.TextChoices):
        LOW      = 'low',      'Faible'
        MODERATE = 'moderate', 'Modéré'
        ELEVATED = 'elevated', 'Élevé'
        HIGH     = 'high',     'Risque élevé'

    class Priority(models.TextChoices):
        LOW    = 'low',    'Basse'
        MEDIUM = 'medium', 'Moyenne'
        HIGH   = 'high',   'Haute'

    id              = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    child_id        = models.UUIDField(db_index=True, help_text="References Child in profile_service")
    parent_id       = models.UUIDField(db_index=True, help_text="Set from JWT — never from request body")
    measurement_id  = models.UUIDField(
        null=True, blank=True,
        help_text="UUID of the measurement that triggered this recommendation"
    )

    # Risk score snapshot
    risk_score      = models.IntegerField(
        default=0,
        help_text="Composite score 0–100. Hidden from parent API responses."
    )
    risk_level      = models.CharField(max_length=10, choices=RiskLevel.choices, default=RiskLevel.LOW)
    risk_label      = models.CharField(max_length=30, default='Faible')

    # Recommendation content
    category        = models.CharField(max_length=30, choices=Category.choices)
    title           = models.CharField(max_length=200)
    message         = models.TextField()
    why             = models.TextField(
        help_text="Plain-language explanation of why this recommendation was generated (explainability)."
    )
    priority        = models.CharField(max_length=10, choices=Priority.choices, default=Priority.LOW)

    # Factor snapshot
    factors_json    = models.JSONField(
        default=list,
        help_text="Full factor breakdown array from the scoring engine at generation time."
    )

    # Metadata
    is_read         = models.BooleanField(default=False)
    is_dismissed    = models.BooleanField(default=False)
    disclaimer      = models.TextField(
        default="Ceci est un outil d'aide à la décision. Consultez un professionnel de santé."
    )
    created_at      = models.DateTimeField(auto_now_add=True)

    class Meta:
        db_table = 'recommendations'
        ordering = ['-created_at']
        constraints = [
            models.UniqueConstraint(
                fields=['measurement_id', 'category', 'title'],
                condition=models.Q(measurement_id__isnull=False),
                name='unique_recommendation_per_measurement',
            )
        ]

    def __str__(self):
        return f"Recommendation({self.category}, {self.risk_level}, child={self.child_id})"

